fix: added scrollbar width 0

--- a/english-for-kids/src/scss/main.scss
+++ b/english-for-kids/src/scss/main.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chicle&display=swap');
 
+::-webkit-scrollbar { width: 0 !important }
+
 :root{
   font-size: 10px;
   font-family: Helvetica, Arial, sans-serif;
